Added translations sort tool,sorted translations

--- a/mobile/src/core/localization/translations/en.json
+++ b/mobile/src/core/localization/translations/en.json
@@ -13,9 +13,17 @@
   "home": {
     "screens": {
       "home": {
-        "title": "Home",
-        "testButtonTitle": "Touch me!"
+        "testButtonTitle": "Touch me!",
+        "title": "Home"
       }
+    }
+  },
+  "models": {
+    "account": {
+      "address": "Address",
+      "id": "ID",
+      "passphrase": "Passphrase",
+      "title": "Account"
     }
   },
   "settings": {
@@ -23,14 +31,6 @@
       "settings": {
         "title": "Settings"
       }
-    }
-  },
-  "models": {
-    "account": {
-      "title": "Account",
-      "address": "Address",
-      "id": "ID",
-      "passphrase": "Passphrase"
     }
   }
 }
