--- a/mobile/src/core/localization/translations/ru.json
+++ b/mobile/src/core/localization/translations/ru.json
@@ -1,20 +1,51 @@
 {
-  "core": {
-    "actions": {
-      "cancel": "Отмена",
-      "save": "Сохранить"
+  "auth": {
+    "errors": {
+      "accountExist": "Аккаунт уже импортирован",
+      "incorrectAddress": "Некорректный BURST-адрес",
+      "insecurePin": "Небезопасный ПИН, рекомендуется не менее {{chars}} символов"
     },
     "screens": {
-      "loading": {
-        "loadingText": "Загрузка приложения (Шучу, просто показываю загрузочный экран)"
+      "accounts": {
+        "addAccount": "Добавить аккаунт",
+        "createAccount": "Создать аккаунт",
+        "noAccounts": "Нет аккаунтов",
+        "title": "Аккаунты"
+      },
+      "addAccount": {
+        "activeAccount": "Активный аккаунт",
+        "activeAccountHint": "Активные аккаунты используются для совершения BURST транзакций. Необходимо сгенерировать или ввести кодовую фразу. Пользователь должен создать PIN-код для транзакций. Кодовая фраза используется только для шифрования приватного ключа и нигде не сохраняется.",
+        "addAccount": "Добавить аккаунт",
+        "passiveAccountHint": "Пассивные аккаунты используются если известен BURST-адрес, но нет необходимости совершать транзакции. Это безопаснее. Пассивный аккаунт всегда можно преобразовать в активный.",
+        "title": "Добавить аккаунт"
+      },
+      "createAccount": {
+        "createAccount": "Создать аккаунт",
+        "enterPin": "Введите ПИН-код для защиты аккаунта. ПИН используется для подтверждения действий с аккаунтом.",
+        "generatedPercent": "Сгенерировано: {{percent}}%",
+        "howToGenerate": "Двигайте пальцем в выделенной области чтобы сгенерировать случайный ключ для генерации пароля.",
+        "notePassphraseHint": "Запишите кодовую фразу. Кодовая фраза это главный ключ к аккаунту. Всегда держите кодовую фразу в безопасности!",
+        "title": "Создать аккаунт"
       }
     }
   },
-  "home": {
+  "core": {
+    "actions": {
+      "add": "Добавить",
+      "cancel": "Отмена",
+      "create": "Создать",
+      "ok": "ОК",
+      "save": "Сохранить"
+    },
+    "layout": {
+      "preventBackButton": {
+        "alertMessage": "Информация будет утеряна",
+        "alertTitle": "Вы уверены?"
+      }
+    },
     "screens": {
-      "home": {
-        "testButtonTitle": "Нажми меня!",
-        "title": "Главная"
+      "loading": {
+        "loadingText": "Загрузка..."
       }
     }
   },
@@ -23,14 +54,8 @@
       "address": "Адрес",
       "id": "ID",
       "passphrase": "Кодовая фраза",
+      "pin": "ПИН",
       "title": "Учетная запись"
-    }
-  },
-  "settings": {
-    "screens": {
-      "settings": {
-        "title": "Настройки"
-      }
     }
   }
 }
