feat(sidebar): update sidebar links, logo, and address

--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -62,10 +62,10 @@
     "asset_data_loading": "Asset data loading, please wait...",
     "asset_decimals": "Asset Decimals",
     "asset_decimals_help": "The maximum allowed number of digits after the asset quantity decimal point.",
-    "asset_exchange": "Asset Exchange",
+    "asset_exchange": "Decentralized Exchange",
     "asset_exchange_duplicates_warning": "<strong>Warning<\/strong>: There is 1 other asset with the same name in the asset exchange. Please make sure you choose the right one. Look at the account and asset ID for confirmation.",
     "asset_exchange_duplicates_warning_plural": "<strong>Warning<\/strong>: There are __count__ other assets with the same name in the asset exchange. Please make sure you choose the right one. Look at the account and asset ID for confirmation.",
-    "asset_exchange_tutorial": "Asset Exchange Tutorial",
+    "asset_exchange_tutorial": "Decentralized Exchange Tutorial",
     "asset_issuance": "Asset Issuance",
     "asset_minimum_fee_help": "The minimum fee to issue an asset is 1,000 Burst.",
     "asset_name": "Asset Name",
