feat(sidebar): add QR code to sidebar, update nav

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -412,6 +412,7 @@
    "error_whole_quantity" : "Количеството трябва да бъде цяло число.",
    "error_word_list" : "Не може да се зареди списък с думи...",
    "error_wrong_buyer_for_alias" : "Грешен купувач на псевдоним.",
+   "escrow": "Escrow",
    "experimental_release" : "Експериментално издание",
    "export_contact" : "Експортирай контактите",
    "failed" : "Неуспешно",
@@ -733,6 +734,9 @@
    "show_console_log_button" : "Показване на бутон дневник конзола",
    "signature_hash" : "Подпис хеш",
    "signed_transaction_bytes" : "Байта на подписана сделка",
+   "smart_contracts": "Smart Contracts",
+   "standard_fee": "Standard fee:",
+   "subscriptions": "Subscriptions",
    "start_date" : "От дата",
    "start_forging" : "Започни коване",
    "start_forging_confirmation" : "Ако искате да започнете коване, щракнете върху бутона по-долу, за да потвърдите.",
