--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -412,6 +412,7 @@
    "error_whole_quantity" : "Quantitat ha de ser un nombre enter.",
    "error_word_list" : "No s'ha pogut carregar la llista de paraules...",
    "error_wrong_buyer_for_alias" : "Comprador àlies equivocat.",
+   "escrow": "Escrow",
    "experimental_release" : "Versió experimental",
    "export_contact" : "Exportar els contactes",
    "failed" : "Error",
@@ -733,7 +734,10 @@
    "show_console_log_button" : "Mostrar el botó per Iniciar la Consola",
    "signature_hash" : "Hash de la Firma",
    "signed_transaction_bytes" : "Bytes de la Transacció Firmada",
+   "smart_contracts": "Smart Contracts",
+   "standard_fee": "Standard fee:",
    "start_date" : "Data d'inici",
+   "subscriptions": "Subscriptions",
    "start_forging" : "Començar a Forjar",
    "start_forging_confirmation" : "Si voleu començar a Forjar, feu clic al botó de baix per confirmar.",
    "start_forging_confirmation_passphrase" : "Si voleu començar a Forjar, escriviu la vostre contrasenya per confirmar-ho.",
