--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -412,6 +412,7 @@
    "error_whole_quantity" : "Množství musí být celé číslo.",
    "error_word_list" : "Nelze načíst seznam slov...",
    "error_wrong_buyer_for_alias" : "Nesprávný kupující pro alias.",
+   "escrow": "Escrow",
    "experimental_release" : "Zkušební verze",
    "export_contact" : "Exportovat kontakty",
    "failed" : "Nepodařilo se",
@@ -733,7 +734,10 @@
    "show_console_log_button" : "Zobrazit tlačítko logovací konzole",
    "signature_hash" : "Hash podpisu",
    "signed_transaction_bytes" : "Počet bajtů podepsané transakce",
+   "smart_contracts": "Smart Contracts",
+   "standard_fee": "Standard fee:",
    "start_date" : "Počátek",
+   "subscriptions": "Subscriptions",
    "start_forging" : "Zahájit forging",
    "start_forging_confirmation" : "Pokud chcete zahájit kování, klikněte na tlačítko níže pro potvrzení.",
    "start_forging_confirmation_passphrase" : "Potvrďte začátek těžby vaším heslem.",
