--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -412,6 +412,7 @@
     "error_whole_quantity": "Menge muss eine ganze Zahl sein.",
     "error_word_list": "Wort-Liste konnte nicht geladen werden...",
     "error_wrong_buyer_for_alias": "Falscher Käufer für dieses Alias.",
+    "escrow": "Escrow",
     "experimental_release": "Experimentelle Version",
     "export_contact": "Kontakte exportieren",
     "failed": "Fehlgeschlagen",
@@ -733,8 +734,11 @@
     "show_console_log_button": "Schaltfläche für Konsole anzeigen",
     "signature_hash": "Signaturhash",
     "signed_transaction_bytes": "Signierte Transaktionsbytes",
+    "smart_contracts": "Smart Contracts",
+    "standard_fee": "Standard fee:",
     "start_date": "Startdatum",
-    "start_forging": "Blockgeneration starten",
+    "subscriptions": "Subscriptions",
+   "start_forging": "Blockgeneration starten",
     "start_forging_confirmation": "Wenn Sie Blöcke generieren möchten, klicken Sie auf die Schaltfläche unten zur Bestätigung.",
     "start_forging_confirmation_passphrase": "Wenn Sie Blöcke generieren möchten, geben Sie Ihre Passphrase zur Bestätigung ein.",
     "state": "Zustand",
