--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -412,6 +412,7 @@
    "error_whole_quantity" : "Η ποσότητα πρέπει να είναι ακέραιος αριθμός.",
    "error_word_list" : "φόρτωση της λίστας λέξεων αδύνατη...",
    "error_wrong_buyer_for_alias" : "Λάθος αγοραστής για το ψευδώνυμο.",
+   "escrow": "Escrow",
    "experimental_release" : "πειραματική έκδοση",
    "export_contact" : "Εξαγωγή επαφών",
    "failed" : "απέτυχε",
@@ -733,7 +734,10 @@
    "show_console_log_button" : "Show Console Log Button",
    "signature_hash" : "Signature Hash",
    "signed_transaction_bytes" : "Signed Transaction Bytes",
+   "smart_contracts": "Smart Contracts",
+   "standard_fee": "Standard fee:",
    "start_date" : "Ημερομηνία έναρξης",
+   "subscriptions": "Subscriptions",
    "start_forging" : "Ξεκινήστε Forging",
    "start_forging_confirmation" : "If you want to start forging, click the button below to confirm.",
    "start_forging_confirmation_passphrase" : "If you want to start forging, type your passphrase to confirm.",
