--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -62,10 +62,10 @@
     "asset_data_loading": "Asset data loading, please wait...",
     "asset_decimals": "Asset Decimals",
     "asset_decimals_help": "The maximum allowed number of digits after the asset quantity decimal point.",
-    "asset_exchange": "Decentralized Exchange",
+    "asset_exchange": "Exchange",
     "asset_exchange_duplicates_warning": "<strong>Warning<\/strong>: There is 1 other asset with the same name in the asset exchange. Please make sure you choose the right one. Look at the account and asset ID for confirmation.",
     "asset_exchange_duplicates_warning_plural": "<strong>Warning<\/strong>: There are __count__ other assets with the same name in the asset exchange. Please make sure you choose the right one. Look at the account and asset ID for confirmation.",
-    "asset_exchange_tutorial": "Decentralized Exchange Tutorial",
+    "asset_exchange_tutorial": "Asset Exchange Tutorial",
     "asset_issuance": "Asset Issuance",
     "asset_minimum_fee_help": "The minimum fee to issue an asset is 1,000 Burst.",
     "asset_name": "Asset Name",
@@ -415,6 +415,7 @@
     "error_whole_quantity": "Quantity must be a whole number.",
     "error_word_list": "Could not load word list...",
     "error_wrong_buyer_for_alias": "Wrong buyer for alias.",
+    "escrow": "Escrow",
     "experimental_release": "Experimental Release",
     "export_contact": "Export Contacts",
     "failed": "Failed",
@@ -746,9 +747,11 @@
     "show_console_log_button": "Show Console Log Button",
     "signature_hash": "Signature Hash",
     "signed_transaction_bytes": "Signed Transaction Bytes",
+    "smart_contracts": "Smart Contracts",
     "standard_fee": "Standard fee:",
     "start_date": "Start Date",
-    "start_forging": "Start Forging",
+    "subscriptions": "Subscriptions",
+   "start_forging": "Start Forging",
     "start_forging_confirmation": "If you want to start forging, click the button below to confirm.",
     "start_forging_confirmation_passphrase": "If you want to start forging, type your passphrase to confirm.",
     "state": "State",
