--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -412,6 +412,7 @@
     "error_whole_quantity": "La cantidad debe ser un número entero.",
     "error_word_list": "No se pudo cargar la lista de palabras...",
     "error_wrong_buyer_for_alias": "Comprador de alias equivocado.",
+    "escrow": "Escrow",
     "experimental_release": "Versión Experimental",
     "export_contact": "Exportar contactos",
     "failed": "Fallo",
@@ -733,8 +734,11 @@
     "show_console_log_button": "Mostrar Botón de Registro de Consola",
     "signature_hash": "Hash de la Firma",
     "signed_transaction_bytes": "Bytes de la Transacción Firmada",
+    "smart_contracts": "Smart Contracts",
+    "standard_fee": "Standard fee:",
     "start_date": "Fecha de Inicio",
-    "start_forging": "Comenzar a Forjar",
+    "subscriptions": "Subscriptions",
+   "start_forging": "Comenzar a Forjar",
     "start_forging_confirmation": "Si desea iniciar la forja, haga clic en el botón de abajo para confirmar.",
     "start_forging_confirmation_passphrase": "Si quiere empezar a forjar, escriba su contraseña como confirmación.",
     "state": "Estado",
