--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -412,6 +412,7 @@
     "error_whole_quantity": "Määrän on oltava kokonaisluku.",
     "error_word_list": "Sanalistaa ei pystytty lataamaan...",
     "error_wrong_buyer_for_alias": "Väärä ostaja aliakselle.",
+    "escrow": "Escrow",
     "experimental_release": "Kokeellinen julkaisu",
     "export_contact": "Export Contacts",
     "failed": "Epäonnistui",
@@ -733,8 +734,11 @@
     "show_console_log_button": "Näytä Konsoli Loki-painike",
     "signature_hash": "Allekirjoituksen tarkiste",
     "signed_transaction_bytes": "Allekirjoitetun tapahtumat tavut",
+    "smart_contracts": "Smart Contracts",
+    "standard_fee": "Standard fee:",
     "start_date": "Aloituspäivä",
-    "start_forging": "Aloita taonta",
+    "subscriptions": "Subscriptions",
+   "start_forging": "Aloita taonta",
     "start_forging_confirmation": "Vahvista takomisen aloitus painamalla alla olevaa painiketta.",
     "start_forging_confirmation_passphrase": "Jos haluat aloittaa takomisen, kirjoita tunnuslause vahvistaaksesi.",
     "state": "Tila",
