--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -412,6 +412,7 @@
     "error_whole_quantity": "La quantité doit être un nombre entier.",
     "error_word_list": "Le chargement de la liste de mots a échoué...",
     "error_wrong_buyer_for_alias": "Mauvais acheteur pour l'alias.",
+    "escrow": "Escrow",
     "experimental_release": "Version bêta",
     "export_contact": "Exporter des contacts",
     "failed": "Échoué",
@@ -733,8 +734,11 @@
     "show_console_log_button": "Afficher le bouton de la console de log",
     "signature_hash": "Hachage de la signature",
     "signed_transaction_bytes": "Octets de la transaction signés",
+    "smart_contracts": "Smart Contracts",
+    "standard_fee": "Standard fee:",
     "start_date": "Date de début",
-    "start_forging": "Commencer à forger",
+    "subscriptions": "Subscriptions",
+   "start_forging": "Commencer à forger",
     "start_forging_confirmation": "Cliquez sur le bouton ci-dessous pour confirmer et commencer à forger.",
     "start_forging_confirmation_passphrase": "Veuillez entrer votre phrase de passe pour confirmer et commencer à forger.",
     "state": "Statut",
