--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -412,6 +412,7 @@
     "error_whole_quantity": "A cantidade ten que ser un número enteiro.",
     "error_word_list": "Non se puido cargala lista de palabras...",
     "error_wrong_buyer_for_alias": "Wrong buyer for alias.",
+    "escrow": "Escrow",
     "experimental_release": "Versión experimental",
     "export_contact": "Export Contacts",
     "failed": "Errado",
@@ -733,8 +734,11 @@
     "show_console_log_button": "Amosar botón de rexistro de consola",
     "signature_hash": "Hash da firma",
     "signed_transaction_bytes": "Bytes da transacción firmada",
+    "smart_contracts": "Smart Contracts",
+    "standard_fee": "Standard fee:",
     "start_date": "Data de inicio",
-    "start_forging": "Comenzar a forxar",
+    "subscriptions": "Subscriptions",
+   "start_forging": "Comenzar a forxar",
     "start_forging_confirmation": "Se queres comezar a forxar, prema no botón de embaixo para confirmar.",
     "start_forging_confirmation_passphrase": "Se quere comezar a forxar, escriba o seu contrasinal como confirmación.",
     "state": "Estado",
