--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -412,6 +412,7 @@
    "error_whole_quantity" : "मात्रा एक पूर्णांक होनी चाहिए।",
    "error_word_list" : "Word सूची को लोड नहीं कर सका...",
    "error_wrong_buyer_for_alias" : "उपनाम के लिए गलत खरीदार।",
+   "escrow": "Escrow",
    "experimental_release" : "प्रयोगात्मक रिलीज",
    "export_contact" : "संपर्क निर्यात करें",
    "failed" : "में असफल रहा",
@@ -733,7 +734,10 @@
    "show_console_log_button" : "कंसोल लॉग बटन दिखाएँ",
    "signature_hash" : "हस्ताक्षर हैश",
    "signed_transaction_bytes" : "हस्ताक्षरित लेनदेन बाइट्स",
+   "smart_contracts": "Smart Contracts",
+   "standard_fee": "Standard fee:",
    "start_date" : "प्रारंभ दिनांक",
+   "subscriptions": "Subscriptions",
    "start_forging" : "शुरू कर फोर्जिंग",
    "start_forging_confirmation" : "यदि आप फोर्जिंग प्रारंभ करना चाहते हैं, तो यह पुष्टि करने के लिए नीचे बटन क्लिक करें।",
    "start_forging_confirmation_passphrase" : "यदि आप फोर्जिंग प्रारंभ करना चाहते हैं, पुष्टि करने के लिए अपना पदबंध (passphrase) लिखें।",
