--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -412,6 +412,7 @@
     "error_whole_quantity": "Kuantitas harus bilangan.",
     "error_word_list": "Tidak dapat memuat daftar kata...",
     "error_wrong_buyer_for_alias": "Pembeli alias salah.",
+    "escrow": "Escrow",
     "experimental_release": "Percobaan Rilis",
     "export_contact": "Export Contacts",
     "failed": "Gagal",
@@ -733,8 +734,11 @@
     "show_console_log_button": "Tampilkan tombol Log konsol",
     "signature_hash": "Tanda tangan Hash",
     "signed_transaction_bytes": "Byte ditandatangani transaksi",
+    "smart_contracts": "Smart Contracts",
+    "standard_fee": "Standard fee:",
     "start_date": "Tanggal Mulai",
-    "start_forging": "Mulai penyusunan",
+    "subscriptions": "Subscriptions",
+   "start_forging": "Mulai penyusunan",
     "start_forging_confirmation": "Jika Anda ingin memulai penempaan, klik tombol di bawah ini untuk mengkonfirmasi.",
     "start_forging_confirmation_passphrase": "Jika Anda ingin mulai membentuk, ketik sandi untuk mengkonfirmasi.",
     "state": "Negara",
