--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -412,6 +412,7 @@
     "error_whole_quantity": "Quantità deve essere un numero intero.",
     "error_word_list": "Impossibile caricare l'elenco di parole...",
     "error_wrong_buyer_for_alias": "Wrong buyer for alias.",
+    "escrow": "Escrow",
     "experimental_release": "Rilascio sperimentale",
     "export_contact": "Export Contacts",
     "failed": "Fallito",
@@ -733,8 +734,11 @@
     "show_console_log_button": "Visualizza il pulsante Log Console",
     "signature_hash": "Hash della firma",
     "signed_transaction_bytes": "Bytes di transazione firmata",
+    "smart_contracts": "Smart Contracts",
+    "standard_fee": "Standard fee:",
     "start_date": "Data inizio",
-    "start_forging": "Inizia a forgiare",
+    "subscriptions": "Subscriptions",
+   "start_forging": "Inizia a forgiare",
     "start_forging_confirmation": "Se vuoi iniziare a forgiare, clicca sul pulsante qui sotto per confermare.",
     "start_forging_confirmation_passphrase": "Se vuoi iniziare a forgiare, digita la passphrase per confermare.",
     "state": "Stato",
