--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -412,6 +412,7 @@
     "error_whole_quantity": "量は整数である必要があります。",
     "error_word_list": "単語リストをロードできませんでした.",
     "error_wrong_buyer_for_alias": "間違ったエイリアスの購買者",
+    "escrow": "Escrow",
     "experimental_release": "試験的リリース",
     "export_contact": "Export Contacts",
     "failed": "失敗",
@@ -733,8 +734,11 @@
     "show_console_log_button": "コンソールのログボタンを表示",
     "signature_hash": "署名のハッシュ",
     "signed_transaction_bytes": "署名されたトランザクションのバイト",
+    "smart_contracts": "Smart Contracts",
+    "standard_fee": "Standard fee:",
     "start_date": "開始日",
-    "start_forging": "鋳造を開始します。",
+    "subscriptions": "Subscriptions",
+   "start_forging": "鋳造を開始します。",
     "start_forging_confirmation": "もし鋳造を開始するのなら、確認のために下のボタンをクリックしてください。",
     "start_forging_confirmation_passphrase": "鋳造を開始する場合は、確認のためにパスフレーズを入力してください。",
     "state": "状態",
