--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -412,6 +412,7 @@
     "error_whole_quantity": "Kiekis turi būti pilnas skaičius.",
     "error_word_list": "Nepavyko įkelti žodžių sąrašo...",
     "error_wrong_buyer_for_alias": "Neteisingas pseudonimo pirkėjas.",
+    "escrow": "Escrow",
     "experimental_release": "Eksperimentinė versija",
     "export_contact": "Export Contacts",
     "failed": "Nepavyko",
@@ -734,7 +735,10 @@
     "signature_hash": "Parašo \"hash",
     "signed_transaction_bytes": "Pasirašytos transakcijos baitai",
     "start_date": "Pradžios Data",
-    "start_forging": "Pradėti \"kalti",
+    "smart_contracts": "Smart Contracts",
+    "standard_fee": "Standard fee:",
+    "subscriptions": "Subscriptions",
+   "start_forging": "Pradėti \"kalti",
     "start_forging_confirmation": "Jei Jūs norite pradėti \"kalimą\", spustelėkite mygtuką žemiau, norėdami patvirtinti.",
     "start_forging_confirmation_passphrase": "Jei norite pradėti \"kalimą\", įveskite savo slaptažodį patvirtinimui.",
     "state": "Būsena",
