--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -412,6 +412,7 @@
     "error_whole_quantity": "Hoeveelheid moet een geheel getal zijn.",
     "error_word_list": "Woordenlijst kan niet worden geladen...",
     "error_wrong_buyer_for_alias": "Verkeerde koper voor deze alias.",
+    "escrow": "Escrow",
     "experimental_release": "Experimentele Uitgave",
     "export_contact": "Exporteer Contacten",
     "failed": "Mislukt",
@@ -733,8 +734,11 @@
     "show_console_log_button": "Console Log knop weergeven",
     "signature_hash": "Handtekening Hash",
     "signed_transaction_bytes": "Ondertekende transactie Bytes",
+    "smart_contracts": "Smart Contracts",
+    "standard_fee": "Standard fee:",
     "start_date": "Begindatum",
-    "start_forging": "Start Forging",
+    "subscriptions": "Subscriptions",
+   "start_forging": "Start Forging",
     "start_forging_confirmation": "Als u wilt beginnen met smeden, klik op de knop hieronder om dit te bevestigen.",
     "start_forging_confirmation_passphrase": "Indien u wilt beginnen met genereren, typ dan uw wachtwoord in om te bevestigen.",
     "state": "Staat",
