--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -412,6 +412,7 @@
     "error_whole_quantity": "Ilość musi byc liczbą całkowitą.",
     "error_word_list": "Lista słów nie została załadowana...",
     "error_wrong_buyer_for_alias": "Zły kupujący alias.",
+    "escrow": "Escrow",
     "experimental_release": "Eksperymentalne Wydanie",
     "export_contact": "Eksport kontaktów",
     "failed": "Nie udało się",
@@ -742,8 +743,11 @@
     "show_console_log_button": "Pokaż przycisk do wyświetlenia konsoli",
     "signature_hash": "Hash podpisu",
     "signed_transaction_bytes": "Bajty podpisanej transakci",
+    "smart_contracts": "Smart Contracts",
+    "standard_fee": "Standard fee:",
     "start_date": "Data rozpoczęcia",
-    "start_forging": "Rozpocznij Forging",
+    "subscriptions": "Subscriptions",
+   "start_forging": "Rozpocznij Forging",
     "start_forging_confirmation": "Naciśnij przycik poniżej by rozpocząć forging, .",
     "start_forging_confirmation_passphrase": "Wpisz hasło i potwierdź by rozpocząć forging.",
     "state": "Stan",
