--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -412,6 +412,7 @@
    "error_whole_quantity" : "A quantidade deve ser um número inteiro.",
    "error_word_list" : "Não foi possível carregar a lista de palavras...",
    "error_wrong_buyer_for_alias" : "Comprador errado para o pseudônimo.",
+   "escrow": "Escrow",
    "experimental_release" : "Versão experimental",
    "export_contact" : "Exportar contatos",
    "failed" : "Falhou",
@@ -733,7 +734,10 @@
    "show_console_log_button" : "Mostrar botão de Log do Console",
    "signature_hash" : "Hash da Assinatura",
    "signed_transaction_bytes" : "Bytes da transação assinada",
+   "smart_contracts": "Smart Contracts",
+   "standard_fee": "Standard fee:",
    "start_date" : "Data de início",
+   "subscriptions": "Subscriptions",
    "start_forging" : "Iniciar o forjamento",
    "start_forging_confirmation" : "Se você quiser começar a forjar, clique no botão abaixo para confirmar.",
    "start_forging_confirmation_passphrase" : "Se você quer começar o forjamento, digite sua senha para confirmar.",
