--- a/web/angular-wallet/src/locales/pt-pt.json
+++ b/web/angular-wallet/src/locales/pt-pt.json
@@ -412,6 +412,7 @@
     "error_whole_quantity": "A quantidade deve ser um número inteiro.",
     "error_word_list": "Não se conseguiu carregar a lista de palavras...",
     "error_wrong_buyer_for_alias": "Comprador de alias errado.",
+    "escrow": "Escrow",
     "experimental_release": "Versão Experimental",
     "export_contact":"Exportar Contactos",
     "failed": "Errou",
@@ -733,8 +734,11 @@
     "show_console_log_button": "Mostrar Botom de Registro de Consola",
     "signature_hash": "Hash da Assinatura",
     "signed_transaction_bytes": "Bytes da Transação Assinada",
+    "smart_contracts": "Smart Contracts",
+    "standard_fee": "Standard fee:",
     "start_date": "Data de início",
-    "start_forging": "Iniciar o Forjamento",
+    "subscriptions": "Subscriptions",
+   "start_forging": "Iniciar o Forjamento",
     "start_forging_confirmation": "Se você quiser começar a forjar, clique no botão abaixo para confirmar.",
     "start_forging_confirmation_passphrase": "Se você quer começar a forjar, digite a sua senha como confirmação.",
     "state": "Estado",
