--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -412,6 +412,7 @@
    "error_whole_quantity" : "Cantitatea trebuie să fie un număr întreg.",
    "error_word_list" : "Nu s-a putut încărca lista de cuvinte...",
    "error_wrong_buyer_for_alias" : "Cumpărător greşit pentru alias.",
+   "escrow": "Escrow",
    "experimental_release" : "Versiune Experimentală",
    "export_contact" : "Exportă Contacte",
    "failed" : "Eşuat",
@@ -733,7 +734,10 @@
    "show_console_log_button" : "Arată butonul de logare al consolei",
    "signature_hash" : "Hash-ul Semnăturii",
    "signed_transaction_bytes" : "Bytes-ii tranzacției semnalate",
+   "smart_contracts": "Smart Contracts",
+   "standard_fee": "Standard fee:",
    "start_date" : "Data începerii",
+   "subscriptions": "Subscriptions",
    "start_forging" : "Începe forjarea",
    "start_forging_confirmation" : "Dacă dorești să începi forjarea, fă clic pe butonul de mai jos pentru a confirma.",
    "start_forging_confirmation_passphrase" : "Dacă dorești să începi forjarea, tastează parola ta de autentificare pentru a confirma.",
