--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -412,6 +412,7 @@
     "error_whole_quantity": "Количество должно быть целым числом.",
     "error_word_list": "Не удалось загрузить список слов...",
     "error_wrong_buyer_for_alias": "Неверный покупатель псевдонима.",
+    "escrow": "Escrow",
     "experimental_release": "Экспериментальный релиз",
     "export_contact": "Export Contacts",
     "failed": "Не удалось",
@@ -733,8 +734,11 @@
     "show_console_log_button": "Показать кнопку Журнал консоли",
     "signature_hash": "Хэш Подписи",
     "signed_transaction_bytes": "Подписанные байты транзакции",
+    "smart_contracts": "Smart Contracts",
+    "standard_fee": "Standard fee:",
     "start_date": "Дата начала",
-    "start_forging": "Начать Форжинг",
+    "subscriptions": "Subscriptions",
+   "start_forging": "Начать Форжинг",
     "start_forging_confirmation": "Если вы хотите начать форжинг, нажмите кнопку ниже для подтверждения.",
     "start_forging_confirmation_passphrase": "Если вы хотите начать форжинг, введите ваш пароль для подтверждения.",
     "state": "Состояние",
