--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -412,6 +412,7 @@
     "error_whole_quantity": "Množstvo musí byť celé číslo.",
     "error_word_list": "Nepodarilo sa načítať zoznam slov...",
     "error_wrong_buyer_for_alias": "Nesprávny kupujúci aliasu.",
+    "escrow": "Escrow",
     "experimental_release": "Experimentálna verzia",
     "export_contact": "Export Contacts",
     "failed": "Neúspešne",
@@ -733,8 +734,11 @@
     "show_console_log_button": "Ukázať tlačidlo Log konzoly",
     "signature_hash": "Hash podpisu",
     "signed_transaction_bytes": "Podpísané bajty transakcií",
+    "smart_contracts": "Smart Contracts",
+    "standard_fee": "Standard fee:",
     "start_date": "Dátum začatia",
-    "start_forging": "Začať kovanie",
+    "subscriptions": "Subscriptions",
+   "start_forging": "Začať kovanie",
     "start_forging_confirmation": "Ak chcete začať kovať, kliknite na tlačítko nižšie pre potvrdenie.",
     "start_forging_confirmation_passphrase": "Ak chcete začať kovať, zadajte svoje heslo pre potvrdenie.",
     "state": "Stav",
