--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -412,6 +412,7 @@
     "error_whole_quantity": "Iznos mora biti ceo broj.",
     "error_word_list": "Nije moguće učitavanje liste reči...",
     "error_wrong_buyer_for_alias": "Pogrešan kupac alias-a.",
+    "escrow": "Escrow",
     "experimental_release": "Eksperimentalna Verzija",
     "export_contact": "Export Contacts",
     "failed": "Nije uspelo",
@@ -733,8 +734,11 @@
     "show_console_log_button": "Prikaži Log Dugme Konzole",
     "signature_hash": "Hash Potpis",
     "signed_transaction_bytes": "Potpisana Transakcija Bytes",
+    "smart_contracts": "Smart Contracts",
+    "standard_fee": "Standard fee:",
     "start_date": "Početni Datum",
-    "start_forging": "Počnite Kovati",
+    "subscriptions": "Subscriptions",
+   "start_forging": "Počnite Kovati",
     "start_forging_confirmation": "Ako želite da započnete sa kovanjem, potvrdite klikom na dugme ispod.",
     "start_forging_confirmation_passphrase": "Ako želite da započnete kovanje, molimo Vas da unesete svoju lozinku.",
     "state": "Stanje",
