--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -412,6 +412,7 @@
     "error_whole_quantity": "Износ мора бити цео број.",
     "error_word_list": "Није могуће учитавање листе речи...",
     "error_wrong_buyer_for_alias": "Погрешан купац алиас-а.",
+    "escrow": "Escrow",
     "experimental_release": "Експериментална Верзија",
     "export_contact": "Export Contacts",
     "failed": "Није успело",
@@ -733,8 +734,11 @@
     "show_console_log_button": "Прикажи Лог Дугме Конзоле",
     "signature_hash": "Hash Потпис",
     "signed_transaction_bytes": "Потписана Трансакција Bytes",
+    "smart_contracts": "Smart Contracts",
+    "standard_fee": "Standard fee:",
     "start_date": "Почетни Датум",
-    "start_forging": "Почните Ковати",
+    "subscriptions": "Subscriptions",
+   "start_forging": "Почните Ковати",
     "start_forging_confirmation": "Ако желите да започнете са ковањем, потврдите кликом на дугме испод.",
     "start_forging_confirmation_passphrase": "Ако желите да започнете ковање, молимо Вас да унесете своју лозинку.",
     "state": "Стање",
