--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -412,6 +412,7 @@
    "error_whole_quantity" : "Miktar bir tamsayı olması gerekiyor.",
    "error_word_list" : "Sözcük listesi yüklenemedi...",
    "error_wrong_buyer_for_alias" : "Rumuz için yanlış alıcı.",
+   "escrow": "Escrow",
    "experimental_release" : "Deneysel yayın",
    "export_contact" : "Kişileri çıkart",
    "failed" : "Başarısız",
@@ -733,7 +734,10 @@
    "show_console_log_button" : "Show Console Log Button",
    "signature_hash" : "İmza Hash",
    "signed_transaction_bytes" : "Signed Transaction Bytes",
+   "smart_contracts": "Smart Contracts",
+   "standard_fee": "Standard fee:",
    "start_date" : "Başlangıç tarihi",
+   "subscriptions": "Subscriptions",
    "start_forging" : "Dövmeye başla",
    "start_forging_confirmation" : "Dövmeyi  onaylamak için aşağıdaki düğmeyi tıklatın.",
    "start_forging_confirmation_passphrase" : "Dövmeği , onaylamak için parolanızıı girin.",
