--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -412,6 +412,7 @@
     "error_whole_quantity": "Кількість повинна бути цілим числом.",
     "error_word_list": "Не вдалося завантажити список слів...",
     "error_wrong_buyer_for_alias": "Невірний покупець псевдоніма.",
+    "escrow": "Escrow",
     "experimental_release": "Експериментальний реліз",
     "export_contact": "Експортувати контакти",
     "failed": "Не вдалося",
@@ -733,8 +734,11 @@
     "show_console_log_button": "Відображати кнопку \"консолі  журналу",
     "signature_hash": "Хэш Підпису",
     "signed_transaction_bytes": "Підписані байти транзакції",
+    "smart_contracts": "Smart Contracts",
+    "standard_fee": "Standard fee:",
     "start_date": "Дата початку",
-    "start_forging": "Почати форжинг",
+    "subscriptions": "Subscriptions",
+   "start_forging": "Почати форжинг",
     "start_forging_confirmation": "Якщо ви хочете, почати форжинг, натисніть кнопку нижче, щоб підтвердити.",
     "start_forging_confirmation_passphrase": "Якщо ви хочете, почати форжинг, введіть ваш парольну фразу для підтвердження.",
     "state": "Стан",
