--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -412,6 +412,7 @@
     "error_whole_quantity": "数量必须是整数。",
     "error_word_list": "无法加载单词列表...",
     "error_wrong_buyer_for_alias": "别名的错误购买者。",
+    "escrow": "Escrow",
     "experimental_release": "测试版本发布",
     "export_contact": "Export Contacts",
     "failed": "失败",
@@ -733,8 +734,11 @@
     "show_console_log_button": "显示控制台日志按钮",
     "signature_hash": "哈希签名",
     "signed_transaction_bytes": "已签名的交易字节",
+    "smart_contracts": "Smart Contracts",
+    "standard_fee": "Standard fee:",
     "start_date": "开始日期",
-    "start_forging": "开始锻造",
+    "subscriptions": "Subscriptions",
+   "start_forging": "开始锻造",
     "start_forging_confirmation": "如果您想开始锻造，单击下面的按钮确认。",
     "start_forging_confirmation_passphrase": "如果您想要开始锻造，请输入您的密码来确认。",
     "state": "状态",
