--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -412,6 +412,7 @@
     "error_whole_quantity": "數量必須是整數。",
     "error_word_list": "無法加載單詞列表...",
     "error_wrong_buyer_for_alias": "別名的錯誤購買者。",
+    "escrow": "Escrow",
     "experimental_release": "測試版本發佈",
     "export_contact": "Export Contacts",
     "failed": "失敗",
@@ -733,8 +734,11 @@
     "show_console_log_button": "顯示控制台日誌按鈕",
     "signature_hash": "哈希簽名",
     "signed_transaction_bytes": "已簽名的交易字節",
+    "smart_contracts": "Smart Contracts",
+    "standard_fee": "Standard fee:",
     "start_date": "開始日期",
-    "start_forging": "開始鍛造",
+    "subscriptions": "Subscriptions",
+   "start_forging": "開始鍛造",
     "start_forging_confirmation": "如果您想開始鍛造，單擊下面的按鈕確認。",
     "start_forging_confirmation_passphrase": "如果你想要開始鍛造，請輸入您的密碼確認。",
     "state": "狀態",
