--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -412,6 +412,7 @@
    "error_whole_quantity" : "Količina mora biti iskazana cijelim brojem.",
    "error_word_list" : "Nemogućnost učitanja liste riječi...",
    "error_wrong_buyer_for_alias" : "Pogrešan kupac pseudonima.",
+   "escrow": "Escrow",
    "experimental_release" : "Eksperimentalna inačica",
    "export_contact" : "Export Contacts",
    "failed" : "Neuspjeh",
@@ -733,7 +734,10 @@
    "show_console_log_button" : "Prikaži Log gumb konzole",
    "signature_hash" : "Hash potpisa",
    "signed_transaction_bytes" : "Potpisana transakcija Bytes",
+   "smart_contracts": "Smart Contracts",
+   "standard_fee": "Standard fee:",
    "start_date" : "Početni datum",
+   "subscriptions": "Subscriptions",
    "start_forging" : "Započni kovati",
    "start_forging_confirmation" : "Ako želite započeti kovanje kliknite na donji gumb za potvrdu.",
    "start_forging_confirmation_passphrase" : "Ako želite započeti s kovanjem, unesite vašu lozinku za potvrdu.",
